Alignment adjustments: Fix 404 page and post titles to left align

--- a/themes/bistro/sass/_elements.sass
+++ b/themes/bistro/sass/_elements.sass
@@ -226,7 +226,7 @@ hr
   font-family: $heading-font
   font-size: 2.2rem
   line-height: 1.4
-  text-align: center
+  text-align: left
   width: 100%
   font-weight: 800
   opacity: 1
